--- a/.github/workflows/Tag.yml
+++ b/.github/workflows/Tag.yml
@@ -21,4 +21,6 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event"
       - uses: actions/checkout@v3
-              gitlog --oneline
+      
+      - name: Show Git Log
+      - run:  git log --oneline
