--- a/.github/workflows/Tag.yml
+++ b/.github/workflows/Tag.yml
@@ -23,4 +23,4 @@ jobs:
       - uses: actions/checkout@v3
       
       - name: Show Git Log
-      - run:  git log --oneline
+        run:  git log --oneline
